--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </button>
 
         <a href="#" class="logo">
-          <img src="./assets/images/logo.svg" width="190" height="50" alt="Footcap logo">
+          <img src="./assets/images/logo.jpg" width="190" height="150" alt="Footcap logo">
         </a>
 
         <ul class="navbar-list">
